@@ -16,23 +16,24 @@
         (<tal:block tal:content="view/get_today">26/07/1984</tal:block>)
     </h2>
 
-<ul id="accordion2" class="accordion places" tal:define="places python:view.get_events()['places'];
-                                                         events python:view.get_events()['list']">
+<ul id="accordion2" class="accordion places" tal:define="places view/get_places">
   <li class="accordion-group place" tal:repeat="place places">
     <div class="accordion-heading">
       <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" tal:define="myTarget python:repeat['place'].index" tal:attributes="href string:#${myTarget}"><h3 class="h3soussoustitre" tal:content="place/name"></h3></a>
     </div>
-    <div class="accordion-body" tal:attributes="id python:repeat['place'].index">
+    <div class="accordion-body collapse" tal:attributes="id python:repeat['place'].index">
       <div class="accordion-inner">
         <div class="place_info">
           <div class="place_address" tal:content="structure place/address"></div>
           <div class="place_tel" tal:content="place/tel"></div>
           <div class="place_mailto" ><a href="" tal:attributes="href string:mailto:${place/mail}" tal:content="place/mail"></a></div>
-          <div class="place_website"><a href="" tal:attributes="href place/website" tal:content='python: place["website"].replace("http://", "")' target="_blank"></a></div>
+          <div tal:define="website place/website"
+               tal:condition="website"
+               class="place_website"><a href="" tal:attributes="href website" tal:content='python: website.replace("http://", "")' target="_blank"></a></div>
         </div>
       </div>
       <ul>     
-        <li tal:repeat="event python:events[place['name']]" class="arsene50_events"> 
+        <li tal:repeat="event place/events" class="arsene50_events"> 
         <div tal:attributes='id string:moreinfo${repeat/event/number}'>
             <h4 class="h4ssstitre" tal:content="event/name"></h4>
             <strong class="event_question" i18n:translate="When?">Quand ?</strong>
@@ -46,10 +47,6 @@
             <br />
             <strong class="event_question" i18n:translate="available_seats">Place(s) restante(s) :</strong>
             <span class="event_available_seats" tal:content="event/available_seats"></span>
-        </div>
-        <a href="#" class="show_hide" tal:attributes="rel string:#moreinfo_${repeat/place/number}_${repeat/event/number}" i18n:translate="moreinfo">En savoir plus</a>
-        <div class="moreinfo" tal:attributes="id string:moreinfo_${repeat/place/number}_${repeat/event/number}">
-            <div tal:content="structure event/longdesc"></div>
         </div>
         <!--div tal:content="event/sale_all_day"></div-->
         <!--div tal:content="event/spectacle_id"></div-->
